automation/n8n/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-public
  namespace: automation
spec:
  ingressClassName: traefik
  rules:
    - host: n8n.oscargicast.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
